Fix issue of off center content inside body tag.

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header p {
 }
 
 main {
-  max-width: 700px;
+  max-width: 80vw;
   margin: 0 auto;
   display: grid;
   gap: 1rem;
